# vision-app

./:  README.md  .gitignore  CMakeLists.txt
.cache/clangd/index/: FrameGrabber.cpp.6EF1A852156DCF37.idx  FrameGrabber.h.64D64D07482CF082.idx  FrameQueue.cpp.BA2C4A6ED3D30608.idx  FrameQueue.h.EFE48569D6F2ABA4.idx  KalmanTracker.cpp.13A66C63C3F0D5A4.idx  KalmanTracker.h.57B593A38CCDAFB6.idx  RollingStats.h.9EEF929660A074A3.idx  ThreadPool.h.D4105B028F97CD1B.idx  TrackerSM.h.DAEB86F592CFFD4E.idx  Types.h.8492AB5EAB864197.idx  VisionProcessor.cpp.AE497279B3D0AEC6.idx  VisionProcessor.h.EDCA6E60913DB367.idx  main.cpp.CF1353D049F898EB.idx
include/: AppTypes.h  FaceDetector_OpenCVDNN.h  FrameGrabber.h  FrameQueue.h  ITracker.h  KalmanTracker.h  RollingStats.h  ThreadPool.h  TrackerSM.h  Utils.h  VisionProcessor.h
include/vision/Interfaces/: FaceBackendFactory.h  IFaceDetector.h  IFaceEmbedder.h
include/vision/Types/: Types.h
src/: FrameGrabber.cpp  FrameQueue.cpp  KalmanTracker.cpp  ThreadPool.cpp  Utils.cpp  VisionProcessor.cpp  main.cpp
src/detect/: FaceDetector_OpenCVDNN.cpp
src/embed/: FaceEmbedder_OpenCVDNN.cpp
